Fix slack lander button on mobile

--- a/scss/partials/_slack_lander.scss
+++ b/scss/partials/_slack_lander.scss
@@ -139,6 +139,10 @@ div.slack-lander-wrap {
       width: 440px;
       padding: 6px 12px;
 
+      @include mobile() {
+        width: 100%;
+      }
+
       span.slack-white-icon {
         width: 24px;
         height: 24px;
